turtleart.lessons.turtleart.Main.DiskFour.scala.error
Source:14: error: not found: value orange
	setCouleur(orange)
                   ^Source:20: error: not found: value violet
	setCouleur(violet)
                   ^